# remote-ops-workspace

./: .dockerignore  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  README.tr.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements-release-compat.txt  requirements-release.txt  requirements.txt  setup.py
configs/: feature_manifest.json  gui_parity_criteria.json  gui_visual_metrics.json  gui_visual_reference_overrides.json  mobaxterm_parity_evidence.json  mobile_test_matrix.json  native_installer_smoke.json  platform_parity_promotion.json  platform_targets.json  platform_verified_evidence.json  profiles.example.json  release_matrix.json  release_toolchain.json  security_baseline.json  settings.example.json  xp_native_evidence_contract.json
docker/: Dockerfile.web  compose.yaml
docs/: ANDROID.md  ARCHITECTURE.md  BROWSER_API.md  FILE_TRANSFER.md  FULL_FEATURE_COVERAGE.md  GUI_DESIGN.md  IMPORTERS.md  IOS.md  LAYOUTS.md  MOBAXTERM_PARITY.md  PLATFORM_PROMOTION_RUNBOOK.md  PLATFORM_SUPPORT.md  PLUGIN_DEVELOPMENT.md  PRODUCTION_DEPLOYMENT.md  PROFILE_EDITORS.md  PROTOCOLS.md  RELEASE_STRATEGY.md  ROADMAP.md  SECURITY_MODEL.md  TEAM_SYNC.md  TERMINAL.md  TRADEMARKS.md  VERIFYING.md
installers/: install-termux.sh  install.bat  install.ps1  install.sh
scripts/: check_ci_workflow.py  check_code_security_workflow.py  check_container_base_images.py  check_docs.py  check_extended_platform_builder.py  check_extended_platform_dispatch_inputs.py  check_extended_platform_evidence.py  check_feature_reality.py  check_first_run_ux.py  check_gui_design_previews.py  check_gui_interactions.py  check_gui_parity.py  check_gui_visual_metrics.py  check_moba_macro_live_evidence.py  check_moba_professional_deployment_evidence.py  check_moba_professional_update_manifest.py  check_moba_server_release_evidence.py  check_moba_smartcard_evidence.py  check_moba_text_remote_edit_evidence.py  check_moba_xserver_release_evidence.py  check_mobapt_cache_evidence.py  check_mobaxterm_parity_evidence.py  check_mobile_emulator_smoke.py  check_mobile_support.py  check_native_installer_smoke.py  check_product_readiness.py  (+54 more)
(+165 files in other folders)
