[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remote-ops-workspace"
version = "0.1.0"
description = "Operator-first cross-platform remote terminal and connection workspace."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
authors = [{name = "remote-ops-workspace contributors"}]
keywords = [
  "ssh", "rdp", "vnc", "sftp", "mosh", "telnet", "x11", "terminal",
  "remote-desktop", "connection-manager", "pyqt6", "pwa"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Networking",
  "Topic :: Terminals",
]
dependencies = []

[project.optional-dependencies]
desktop = ["PyQt6>=6.6"]
security = ["cryptography>=42"]
package = ["build>=1.2", "pyinstaller>=6.0"]
dev = ["build>=1.2", "pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/YOUR-ORG/remote-ops-workspace"
Documentation = "https://github.com/YOUR-ORG/remote-ops-workspace/tree/main/docs"
Issues = "https://github.com/YOUR-ORG/remote-ops-workspace/issues"

[project.scripts]
row = "remote_ops_workspace.cli:main"
remote-ops-workspace = "remote_ops_workspace.cli:main"

[project.entry-points."remote_ops_workspace.plugins"]
# third-party plugins can register here

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
remote_ops_workspace = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
